# Polymarket-BTC-15-Trading-Bot

./: .env.example  .gitattributes  .gitignore  15m_bot_runner.py  AGENTS.md  CLAUDE.md  README.md  bot.py  local_signal_generator.py  local_signal_runner.py  log_setup.py  patch_gamma_markets.py  patch_market_orders.py  pyproject.toml  redis_control.py  redis_resilience.py  requirements.txt  start_tradingview_stack.ps1  test.py  test_local_signal_generator.py  test_log_redaction.py  test_redis_resilience_integration.py  test_runner_watchdog.py  test_tradingview_webhook.py  tradingview_webhook_receiver.py  tv_collection_watchdog.py  tv_market_select.py  tv_signal_watcher.ps1  tv_signal_watcher.py  view_paper_trades.py
.agent/scripts/: checklist.py
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/conductor/: tracks.md
.context/docs/: COINBASE_BTCUSD, 15.csv  COINBASE_BTCUSD, 5.csv  README.md  architecture.md  backtest-validation.md  ci-policy.md  codex-instructions-AGENTS.md  data-flow.md  development-workflow.md  fusion-strategy.md  glossary.md  local-signal-runbook.md  microstructure-edge-research.md  project-overview.md  rules-AGENTS.md  (+9 more)
.githooks/: pre-commit
backtest/: __init__.py  __main__.py  bias_scan.py  bot_trades.py  calibration.py  cpcv.py  csv_hitrate.py  csv_hitrate_5m.py  db.py  engine.py  fusion_replay.py  gamma.py  guppy_parity.py  ingest.py  inspect_db.py  kaggle_validate.py  kaggle_volgate.py  loss_postmortem.py  matching.py  recorder.py  settlement.py  test_backtest.py
data_sources/: test.py
execution/: execution_engine.py  nautilus_polymarket_integration.py  polymarket_client.py  risk_engine.py  test_execution.py
feedback/: learning_engine.py
grafana/: import_dashboard.py
local_signal/: __init__.py  guppy.py  test_guppy.py
monitoring/: grafana_exporter.py  performance_tracker.py
workflow/: ci-cd.md  python-secops.md
(+46 files in other folders)
